--- a/index.html
+++ b/index.html
@@ -19,5 +19,18 @@
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | QR code component</title>
   </head>
-  <body></body>
+  <body>
+    <figure class="qr-code">
+      <img src="images/image-qr-code.png" alt="QR Code" class="qr-code__img" />
+      <figcaption>
+        <h2 class="qr-code__heading">
+          Improve your front-end skills by building projects
+        </h2>
+        <p class="qr-code__paragraph">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </figcaption>
+    </figure>
+  </body>
 </html>
