--- a/index.html
+++ b/index.html
@@ -20,17 +20,23 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <figure class="qr-code">
-      <img src="images/image-qr-code.png" alt="QR Code" class="qr-code__img" />
-      <figcaption>
-        <h2 class="qr-code__heading">
-          Improve your front-end skills by building projects
-        </h2>
-        <p class="qr-code__paragraph">
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
-      </figcaption>
-    </figure>
+    <main>
+      <figure class="qr-code">
+        <img
+          src="images/image-qr-code.png"
+          alt="QR Code"
+          class="qr-code__img"
+        />
+        <figcaption>
+          <h2 class="qr-code__heading">
+            Improve your front-end skills by building projects
+          </h2>
+          <p class="qr-code__paragraph">
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </figcaption>
+      </figure>
+    </main>
   </body>
 </html>
